2001-01-09  Alex Samuel  <samuel@codesourcery.com>

	* README.sources: Clarify naming conventions.
	* templates/py: Add section banners.
	
	* configure.in: New file.
	* install-sh: Likewise.
	* configure: Likewise.
	* standard.mk.in: New file.
	* standard.mk: Remove.
	* Makefile.in: New file.
	* Makefile: Remove.
	* doc/Makefile.in: New file.
	* doc/Makefile: Remove.
	* doc/design/qmconfig/Makefile.in: New file.
	* doc/design/qmconfig/Makefile: Remove.
	* doc/design/qmtest/Makefile.in: New file.
	* doc/design/qmtest/Makefile: Remove.
	* doc/design/qmtrack/Makefile.in: New file.
	* doc/design/qmtrack/Makefile: Remove.
	
2001-01-09  Alex Samuel  <samuel@codesourcery.com>

	* README: New file.

2001-01-08  Alex Samuel  <samuel@codesourcery.com>

	* standard.mk (BUILDDIR): New macro.
	(DOCDIR): Likewise.
	(HAPPYDOC): Likewise.
	(doc): Depend on doc-python.
	(doc-python): New rule.

2001-01-07  Alex Samuel  <samuel@codesourcery.com>

	* qm/track/__init__.py: Import idb.
	* qm/track/idb.py: New file.
	* qm/track/sql_idb.py (SqlIdb): Drive from IdbBase.
	(SqlIdb.__init__): Initialize base class.
	(SqlIdb.AddIssue): Process triggers.  Return result code.
	(SqlIdb.AddRevision): Likewise.
	(SqlIdb.GetIssue): Process triggers.
	(SqlIdb.GetAllRevisions): Likewise.
	(SqlIdb.RegisterTrigger): Remove.
	(SqlIdb.UnregisterTrigger): Likewise.
	(SqlIdb.GetTriggers): Likewise.
	(SqlIdb.__InsertIssue): New method.
	* qm/track/gadfly_idb.py (GadflyIdb.__init__): Initialize base class.
	* qm/track/memory_idb.py (MemoryIdb): Derive from IdbBase.
	(MemoryIdb.__init__): Initialize base class.
	(MemoryIdb.AddIssue): Process triggers.  Return result code.
	(MemoryIdb.AddRevision): Likewise.
	(MemoryIdb.GetIssue): Process triggers.
	(MemoryIdb.GetAllRevisions): Likewise.
	(MemoryIdb.RegisterTrigger): Remove.
	(MemoryIdb.UnregisterTrigger): Likewise.
	(MemoryIdb.GetTriggers): Likewise.
	(MemoryIdb.__InsertIssue): New method.
	* qm/track/test.py (TestPreupdateTrigger): New class.